<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ImageView
        android:id="@+id/commentImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="100dip"
        android:maxHeight="100dip"
        android:adjustViewBounds="true"
        android:contentDescription="@string/comment_image_content_description"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/saveCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />

        <Button
            android:id="@+id/cancelCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button" />
        
        <Button
            android:id="@+id/clearTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_text_button" />
 
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center" >
        
        <Button
            android:id="@+id/deleteCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />
        
        <Button
            android:id="@+id/mailCommentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_button" />
        
    </LinearLayout>
    
</LinearLayout>